<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/enter_two_numbers"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CFC6C6"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:textColorHint="@color/grey_dark"
        android:hint="@string/enter_first_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#ECE3E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextSecondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_second_number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstNumber" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="0.15"
        app:layout_constraintTop_toBottomOf="@+id/editTextSecondNumber"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.03"
            android:background="@drawable/button_style"
            android:text="@string/plus"
            android:textColor="#D8D2D2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.03"

            android:background="@drawable/button_style"
            android:text="@string/minus"
            android:textColor="#D8D2D2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.03"

            android:background="@drawable/button_style"
            android:text="@string/multiply"
            android:textColor="#D8D2D2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/division_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.03"

            android:background="@drawable/button_style"
            android:text="@string/division"
            android:textColor="#D8D2D2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.03"

            android:background="@drawable/button_style"
            android:text="@string/clear"
            android:textColor="#D8D2D2"
            android:textSize="28sp"
            android:textStyle="bold"
            app:backgroundTint="#BC801A" />


    </LinearLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="serif"
        android:text="@string/result_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CFC6C6"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/result_of_equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/result_of_equation"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#ECE3E3"
        android:textColorHint="@color/grey_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

</androidx.constraintlayout.widget.ConstraintLayout>